--- a/package.json
+++ b/package.json
@@ -6,29 +6,33 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "prettier": "npx prettier --write ./src"
+    "prettier": "npx prettier --write ./src",
+    "test": "jest"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-sidebar-menu": "^4.7.3",
-    "vue-router": "^3.4.5",
     "@fortawesome/fontawesome-free": "^5.15.1",
-    "sass-loader": "^10.0.2",
+    "core-js": "^3.6.5",
     "sass": "^1.26.12",
+    "sass-loader": "^10.0.2",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.5",
+    "vue-sidebar-menu": "^4.7.3",
     "webpack": "^4.44.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service-global": "^4.5.6",
+    "@vue/cli-plugin-unit-jest": "^4.5.7",
     "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service-global": "^4.5.6",
+    "@vue/test-utils": "^1.1.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11",
+    "jest": "^26.5.2",
+    "prettier": "^2.1.2",
     "vue-devtools": "^5.1.4",
-    "prettier": "^2.1.2"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
