--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "distribute": "scripts/distribute.sh",
     "lint": "vue-cli-service lint",
     "prettier": "npx prettier --write ./src",
     "test": "jest"
