--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack": "^4.44.2"
   },
   "devDependencies": {
+    "@shopify/draggable": "^1.0.0-beta.8",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "^4.5.7",
