--- a/package.json
+++ b/package.json
@@ -5,26 +5,29 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "distribute": "scripts/distribute.sh",
     "lint": "vue-cli-service lint",
+    "distribute": "scripts/distribute.sh",
     "prettier": "npx prettier --write ./src",
     "test": "jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.1",
     "sass": "^1.26.12",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.4.5",
     "vue-sidebar-menu": "^4.7.3",
-    "webpack": "^4.44.2"
+    "webpack": "^4.44.2",
+    "workbox-strategies": "^5.1.4"
   },
   "devDependencies": {
     "@interactjs/interact": "^1.10.0",
     "@interactjs/interactjs": "^1.10.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.8",
     "@vue/cli-plugin-unit-jest": "^4.5.7",
     "@vue/cli-service": "~4.5.0",
     "@vue/cli-service-global": "^4.5.6",
@@ -36,7 +39,9 @@
     "prettier": "^2.1.2",
     "vue-devtools": "^5.1.4",
     "vue-template-compiler": "^2.6.11",
-    "vuejs-logger": "^1.5.4"
+    "vuejs-logger": "^1.5.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-routing": "^5.1.4"
   },
   "eslintConfig": {
     "root": true,
