--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
     "register-service-worker": "^1.7.1",
     "sass": "^1.26.12",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.4.5",
     "webpack": "^4.44.2",
-    "workbox-strategies": "^5.1.4",
-    "font-awesome": "^4.7.0"
+    "workbox-strategies": "^5.1.4"
   },
   "devDependencies": {
     "@interactjs/interact": "^1.10.0",
