Upgraded to vue 3 with @vue/compat

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edukiz",
-  "version": "0.1.0",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -13,37 +13,39 @@
     "test": "jest"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "core-js": "^3.6.5",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@vue/compat": "^3.2.23",
+    "core-js": "^3.19.1",
     "font-awesome": "^4.7.0",
-    "register-service-worker": "^1.7.1",
+    "mitt": "^3.0.0",
+    "register-service-worker": "^1.7.2",
     "sass": "^1.26.12",
     "sass-loader": "^10.0.2",
-    "vue": "^2.6.11",
-    "vue-router": "^3.4.5",
-    "webpack": "^4.44.2",
-    "workbox-strategies": "^5.1.4"
+    "vue": "^3.2.23",
+    "vue-router": "^4.0.12",
+    "webpack": "^5.64.4",
+    "workbox-strategies": "^6.4.1"
   },
   "devDependencies": {
-    "@interactjs/interact": "^1.10.0",
-    "@interactjs/interactjs": "^1.10.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "^4.5.8",
-    "@vue/cli-plugin-unit-jest": "^4.5.15",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/cli-service-global": "^4.5.6",
-    "@vue/test-utils": "^1.1.0",
+    "@interactjs/interact": "^1.10.11",
+    "@interactjs/interactjs": "^1.10.11",
+    "@vue/cli-plugin-babel": "~4.5.15",
+    "@vue/cli-plugin-eslint": "~4.5.15",
+    "@vue/cli-plugin-pwa": "^4.5.15",
+    "@vue/cli-plugin-unit-jest": "^5.0.0-rc.1",
+    "@vue/cli-service": "~4.5.15",
+    "@vue/cli-service-global": "^4.5.15",
+    "@vue/compiler-sfc": "^3.2.23",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "@vue/vue3-jest": "^27.0.0-alpha.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "jest": "^27.3.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.5.0",
     "vue-devtools": "^5.1.4",
-    "vue-template-compiler": "^2.6.11",
-    "vuejs-logger": "^1.5.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-routing": "^5.1.4"
+    "vuejs-logger": "^1.5.5",
+    "workbox-expiration": "^6.4.1",
+    "workbox-routing": "^6.4.1"
   },
   "eslintConfig": {
     "root": true,
