--- a/package.json
+++ b/package.json
@@ -64,5 +64,9 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "engines" : {
+    "npm" : ">=10.8.2",
+    "node" : ">=16.0.0 <17.0.0"
+  }
 }
